# gsync-drive

./: .gitignore  CLAUDE.md  README-IT.md  README.md  build-deb.sh  build-rpm.sh  pyproject.toml
data/: gdrive-sync-daemon.service  io.github.teopost.GDriveSync.Daemon.desktop  io.github.teopost.GDriveSync.Daemon.service  io.github.teopost.GDriveSync.desktop  io.github.teopost.GDriveSync.gschema.xml  io.github.teopost.GDriveSync.metainfo.xml
debian/: changelog  clean  control  copyright  gdrive-sync.install  rules
gdrive_sync/: config.py  conflicts.py  const.py  i18n.py  rclone.py
gdrive_sync/daemon/: dbus_service.py  engine.py  main.py  notify.py  tray.py  watcher.py
gdrive_sync/gui/: app_preferences.py  bookmarks.py  conflicts_page.py  daemon_proxy.py  drive_tree.py  main.py  preferences.py  window.py  wizard.py
packaging/: gdrive-sync.spec
po/: compile-mo.py  fr.po  gdrive-sync.pot  it.po
tests/: test_config.py  test_conflicts.py  test_engine.py  test_folder_selection.py  test_rclone_parse.py
